<resources>
    <string name="action_settings">Settings</string>
    <string name="loading_message">Loading…</string>
    <string name="alert_title">There are no note</string>
    <string name="alert_subtitle">Press the + button to \n add a new note</string>
    <string name="toolbarTitle">Do.it</string>
    <string name="high_priority">HIGH</string>
    <string name="medium_priority">MED</string>
    <string name="low_priority">LOW</string>
    <string name="hint_title">Title</string>
    <string name="due_date">Deal date</string>
    <string name="priority">Priority</string>
    <string name="discard">DISCARD</string>
    <string name="save">SAVE</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no">NO</string>
    <string name="pick">PICK</string>
    <string name="a_day">a day</string>
    <string name="no_due_date">deal date</string>
    <string name="title_require">Title is required</string>
    <string name="problem_save">Can not save todo</string>
    <string name="problem_find">Can not find todo</string>
    <string name="problem_delete">Can not delete todo</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>
