...
        android:layout_marginBottom="@dimen/small_space"
        android:text="@string/due_date"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/small_sub_size"/>

    <apidez.com.doit.view.custom.DueDatePicker
        android:id="@+id/due_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space"/>

    <TextView
        android:layout_width="wrap_content"
...
        android:layout_marginBottom="@dimen/small_space"
        android:text="@string/priority"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/small_sub_size"/>

    <apidez.com.doit.view.custom.PriorityPicker
        android:id="@+id/priority_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_space"/>

    <LinearLayout
        android:layout_width="wrap_content"
...
