<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_add_black_24dp"
          android:orderInCategory="100"
          android:title="Add"
          app:showAsAction="always"/>
</menu>
